@@ -3,9 +3,9 @@
 -- file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 --[[
-Graphs CPU Load and process count data. Expects to receive messages containing
-fields entitled `1MinAvg`, `5MinAvg`, `15MinAvg`, and `NumProcesses`, such as
-those generated by the :ref:`config_linux_cpu_stats_decoder`.
+Graphs the load average and process count data. Expects to receive messages
+containing fields entitled `1MinAvg`, `5MinAvg`, `15MinAvg`, and `NumProcesses`,
+such as those generated by the :ref:`config_linux_cpu_stats_decoder`.
 
 Config:
 
@@ -29,12 +29,12 @@ Config:
 
 .. code-block:: ini
 
-    [CpuStatsFilter]
+    [LoadAvgFilter]
     type = "SandboxFilter"
-    filename = "lua_filters/cpustats.lua"
+    filename = "lua_filters/loadavg.lua"
     ticker_interval = 60
     preserve_data = true
-    message_matcher = "Type == 'stats.cpustats'"
+    message_matcher = "Type == 'stats.loadavg'"
 
 --]]
 _PRESERVATION_VERSION = read_config("preservation_version") or 0
@@ -45,7 +45,7 @@ local alert         = require "alert"
 local annotation    = require "annotation"
 local anomaly       = require "anomaly"
 
-local title             = "Cpu Stats"
+local title             = "LoadAvg Stats"
 local rows              = read_config("rows") or 1440
 local sec_per_row       = read_config("sec_per_row") or 60
 local anomaly_config    = anomaly.parse_config(read_config("anomaly_config"))
